# HairNet2Curves

./: README.md  __init__.py  m_geometrynode.py  m_predict.py
ckpt/: model-999.index
config/: config.json  m_cfg.py
data/: crv_mean.txt  crv_std.txt  pos_mean.txt  pos_std.txt  strands_mask.txt  strands_root.txt
hair_detection/: MobileNetV2_unet.py  main.py
hair_orient2D/: CMakeLists.txt  OrientMap.hpp  Renderer.h  SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader  Vec.hpp  XForm.h  main.cpp  main_nobody.cpp
hair_orient2D/lib/: libfftw3-3.lib  libfftw3f-3.lib  libfftw3l-3.lib
model/: m_model.py
setup/: environment.yml  requirements.txt  setup.bat
tools/basic/: m_config.py  m_decorator.py  m_dict.py  m_file.py  m_json.py  m_vis.py
tools/tf/util/: m_decorator.py  m_utility.py
